# CPP_Project_Template

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  customization.md  index.html  params.json
cmake/: cpp.cmake  doxygen.cmake  options.cmake  settings.cmake
doc/: CMakeLists.txt  Doxyfile.in
doxygen/: WELCOME_8md_source.html  Widget_8cpp_source.html  Widget_8h_source.html  annotated.html  annotated.js  classWidget.html  classWidget.js  classes.html  classsome__module_1_1Feature.html  classsome__module_1_1Feature.js  dir_346f8f97dd0b42e88713784f3ec5b303.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d45a9cb87e481340dfd17f375e959958.html  feature_8cpp_source.html  feature_8h_source.html  files.html  files.js  functions.html  functions_func.html  index.html  main_8cpp_source.html  navtree.js  navtreeindex.js  navtreeindex0.js  pages.html  todo.html
doxygen/search/: all_0.js  all_2.js  all_6c.js  all_74.js  all_77.js  classes_66.js  functions_0.js  functions_3.js  search.js
include/mylib/: feature.h
java/: CMakeLists.txt
reports/: gtest-report.xml  valgrind-Cool_Project_Name_GTest-report.xml  valgrind-Cool_Project_Name_exec-report.xml  valgrind-MyProject_GTest-report.xml  valgrind-MyProject_exec-report.xml  valgrind-My_Project_GTest-report.xml  valgrind-My_Project_exec-report.xml  valgrind-exec-report.xml  valgrind-gtest-report.xml
reports/cppcheck-reports/: 0.html  index.html
reports/cpplint-reports/: 0.html  index.html
reports/gcovr-reports/: index._home_travis_build_CaioIcy_CPP_Project_Template_src_another_module_Widget.cpp.html  index._home_travis_build_CaioIcy_CPP_Project_Template_src_main.cpp.html  index._home_travis_build_CaioIcy_CPP_Project_Template_src_some_module_feature.cpp.html  index.html
src/: CMakeLists.txt  main.cpp
src/another_module/: Widget.cpp  Widget.h
src/mylib/: feature.cpp
src/some_module/: feature.cpp  feature.h
test/: CMakeLists.txt
test/another_module/: test_Widget.cpp
test/mylib/: test_feature.cpp
test/myproject/: test_feature.cpp
test/some_module/: test_feature.cpp
utils/travis/: after_success.sh  before_install.sh
